--- a/Html-css-javascript/Game/assets/css/style.css
+++ b/Html-css-javascript/Game/assets/css/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 .game-board {
     width: 100%;
     height: 500px;
@@ -12,6 +11,10 @@
     position: relative;
     overflow: hidden;
     background-image: url("/assets/images/pngtree-blue-pixelated-city-street-background-design-streetstreet-backgroundplantstreet-lightadvertising-image_66443.jpg");
+}
+.reinicio{
+    margin-left: 40%;
+    background-color: aqua;
 }
 .pipe{
     width: 100px;
